storing dropdown values in input boxes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           
           <div class="col-md-3 text-center">
             <div class="btn-group">
-              <input type="readonly" id="input-year" class="form-control" placeholder="Add Year" aria-describedby="year">
+              <input type="text" id="input-year" class="form-control" placeholder="Add Year" aria-describedby="year">
               <div class="input-group-append">
                 <button id="year" class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Year
@@ -62,7 +62,7 @@
 
           <div class="col-md-3 text-center">
             <div class="btn-group">
-              <input type="readonly" id="input-crime" class="form-control" placeholder="Add Crime" aria-describedby="crime-type">
+              <input type="text" id="input-crime" class="form-control" placeholder="Add Crime" aria-describedby="crime-type">
               <div class="input-group-append">
                 <button id="crime-type" class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Crime Type
@@ -74,7 +74,7 @@
 
           <div class="col-md-3 text-center">
             <div class="btn-group">
-              <input type="readonly" id="input-state" class="form-control" placeholder="Add State" aria-describedby="state">
+              <input type="text" id="input-state" class="form-control" placeholder="Add State" aria-describedby="state">
               <div class="input-group-append">
                 <button id="state" class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   State
