map appears and fbi api call returns response

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
 
           <!-- column for mapbox map -->
-          <div class="col-md-9">
+          <div class="col-md-9 tall">
             <div id="map"></div>
           </div>
           
@@ -136,6 +136,7 @@
     <!-- Bootstrap scripts -->
 
     <!-- project-specific scripts -->
+    <script src="assets/scripts/jquery-3.4.1.min.js"></script>
     <script src="assets/scripts/key.js"></script>
     <script src="assets/scripts/states.js"></script>
     <script src="assets/scripts/years.js"></script>
