successfully filtering FBI response

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <!-- column for crime stats -->
           <div class="col-md-3">
             <div class="crime-data">
-              <h4 id="crime-header">Some Data</h4>
-              <p id="crime">Some text</p>
+              <h4 id="crime-header"></h4>
+              <p id="crime-num">Some text</p>
               <p id="crime-per-capita">Some text</p>
               <p id="us-per-capita">Some text</p>
               <p id="rating">Some text</p>
