fbi api text content & conditional statements

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <input type="text" id="input-crime" class="form-control" placeholder="Add Crime" aria-describedby="crime-type">
               <div class="input-group-append">
                 <button id="crime-type" class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Crime Type
+                  Crime
                 </button>
                 <div class="dropdown-menu dropdown-crime-type" aria-labelledby="dropdownMenu2"></div>
               </div>
@@ -100,11 +100,12 @@
           <!-- column for crime stats -->
           <div class="col-md-3">
             <div class="crime-data">
-              <h4 id="crime-header"></h4>
-              <p id="crime-num">Some text</p>
-              <p id="crime-per-capita">Some text</p>
-              <p id="us-per-capita">Some text</p>
-              <p id="rating">Some text</p>
+              <h3 id="crime-header"></h3>
+              <p id="crime-num"></p>
+              <p id="crime-per-capita"></p>
+              <p id="available-data"></p>
+              <!-- <p id="us-per-capita">Some text</p>
+              <p id="rating">Some text</p> -->
             </div>
           </div>
 
