--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
           </div>
 
           <div class="col-md-3 text-center">
-            <button type="button" id="generate-btn" class="btn btn-secondary">Generate</button>
+            <div class="btn-group">
+              <button type="button" id="generate-btn" class="btn btn-secondary">Generate</button>
+            </div>
+            
           </div>
 
           <!-- close button row -->
