dynamically setting cluster data from js doc

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <!-- project-specific scripts -->
     <script src="assets/scripts/jquery-3.4.1.min.js"></script>
     <script src="assets/scripts/key.js"></script>
+    <script src="assets/scripts/cluster.js"></script>
     <script src="assets/scripts/states.js"></script>
     <script src="assets/scripts/years.js"></script>
     <script src="assets/scripts/crimes.js"></script>
