--- a/index.html
+++ b/index.html
@@ -110,6 +110,33 @@
               <!-- <p id="us-per-capita">Some text</p>
               <p id="rating">Some text</p> -->
             </div>
+
+            <!-- Getting Data Start -->
+            <!-- <table class="table table-dark">
+              <thead>
+                <tr>
+                  <th scope="col">Number</th>
+                  <th scope="col">State</th>
+                  <th scope="col">Count</th>
+                </tr>
+
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td class="tdState">Mark</td>
+                  <td class="tdCount">Otto</td>
+                  
+                </tr> 
+                
+              </tbody>
+            </table> -->
+            <!-- Getting Data End -->
+
+
+
+
+
           </div>
 
           <!-- column for mapbox map -->
